<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.mycore.professorenkatalog</groupId>
    <artifactId>professorenkatalog-parent</artifactId>
    <version>2024.06-SNAPSHOT</version>
  </parent>
  <artifactId>profkat-base-module</artifactId>
  <packaging>jar</packaging>
  <name>Professorenkatalog Base</name>
  <description>generic code for professorenkatalog</description>
  <properties>
    <forbiddenapis.skip>true</forbiddenapis.skip>
    <manifest.priority>61</manifest.priority>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <excludes>
          <exclude>config/**</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
        <includes>
          <include>config/**</include>
        </includes>
        <excludes>
          <exclude>web.xml</exclude>
          <exclude>*.template</exclude>
          <exclude>datamodel-*.xml</exclude>
        </excludes>
      </resource>
      <resource>
        <targetPath>META-INF/webcontent</targetPath>
        <directory>src/main/resources/config/lang/webcontent</directory>
      </resource>
      <resource>
        <directory>src/main/resources/config/hibernate</directory>
        <excludes>
          <exclude>*.template</exclude>
        </excludes>
      </resource>
    </resources>

    <!-- needed to execute maven-xml-plugin -->
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addExtensions />
            </manifest>
            <manifestEntries>
              <MCR-Artifact-Id>${project.artifactId}</MCR-Artifact-Id>
              <MCR-Application-Module>${project.name}</MCR-Application-Module>
              <Priority>61</Priority>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <!--  unclear how to handle extensions -->
      <!-- 
 	  <plugin>
        <groupId>org.mycore.plugins</groupId>
        <artifactId>datamodel-plugin</artifactId>
        <configuration>
        	<schemaDirectory></schemaDirectory>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>schema</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      -->
      <!-- doing the datamodel creation manually ... -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>unpack</id>
            <goals>
              <goal>unpack</goal>
            </goals>
            <phase>generate-resources</phase>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>org.mycore.plugins</groupId>
                  <artifactId>datamodel-plugin</artifactId>
                  <version>0.7</version>
                  <includes>datamodel2*.xsl</includes>
                  <excludes>datamodel2ext.xsl</excludes>
                  <outputDirectory>${project.build.outputDirectory}/xsl</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>xml-maven-plugin</artifactId>
        <configuration>
          <transformationSets>
            <transformationSet>
              <dir>src/main/datamodel/def</dir>
              <outputDir>${project.build.outputDirectory}</outputDir>
              <stylesheet>${project.build.outputDirectory}/xsl/datamodel2schema.xsl</stylesheet>
              <fileMappers>
                <fileMapper
                  implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
                  <targetExtension>.xsd</targetExtension>
                </fileMapper>
              </fileMappers>
            </transformationSet>
          </transformationSets>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>transform</goal>
            </goals>
            <phase>compile</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.solr</groupId>
      <artifactId>solr-solrj</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mycore</groupId>
      <artifactId>mycore-base</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mycore</groupId>
      <artifactId>mycore-solr</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mycore.jspdocportal</groupId>
      <artifactId>jspdocportal-common-module</artifactId>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
